Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3000

BitReader::Reset does not initialize buffered_values_

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.5.0, Impala 2.3.4
    • Backend
    • None

    Description

      Observed while working on PARQUET-515 on the ASF JIRA.

      This method is used both in the deprecated BIT_PACKED repetition/definition level encoding and RLE encoding, however the buffered_values_ variable has data copied into it incidentally as part of other BitReader methods invoked by RleDecoder.

      If a user were to read a Parquet file using BIT_PACKED level encoding (unclear if this is seen in the while) containing multiple data pages in a row group, the results could possibly be incorrect (there is also a separate MSB / LSB bit ordering question between BIT_PACKED and RLE encoding styles – it's possible the BIT_PACKED implementation does not match parquet-format at the moment).

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            wesm_impala_7e40 Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: