IMPALA-3000: fix BitReader::Reset()

BitReader::buffered_values_ was not correctly reset when reusing the
BitReader. This could potentially cause incorrect results when reading
Parquet files with the deprecated BIT_PACKED encoding.

Added test coverage for this case by modifying existing tests to
validate output again after calling Reset(). The modified tests
replicated the issue.

Change-Id: I35bd42ae4464d3825c0b5c15dd981308547dd11c
Reviewed-on: http://gerrit.cloudera.org:8080/2202
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Internal Jenkins